--- a/index.html
+++ b/index.html
@@ -4,7 +4,76 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Odin Landing Page</title>
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="header">
+      <div class="logo">Header Logo</div>
+      <ul class="link">
+        <li>header link one</li>
+        <li>header link two</li>
+        <li>header link three</li>
+      </ul>
+    </div>
+    <div class="intro-section">
+      <div class="intro-section-title">This website is awesome</div>
+      <p>
+        This website has some subtext that goes here under the main title. It's
+        smaller font and the color is lower contrast.
+      </p>
+      <button>Sign Up</button>
+      <img src="./img/casio-gshock-logo.png" alt="" />
+    </div>
+    <div class="middle-section">
+      <div class="middle-section-title">Some random information.</div>
+      <div class="middle-section-image-container">
+        <div class="info">
+          <img src="./img/watch_1.jpg" alt="" />
+          <div class="text">
+            This is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="info">
+          <img src="./img/watch_2.png" alt="" />
+          <div class="text">
+            This is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="info">
+          <img src="./img/watch_3.png" alt="" />
+          <div class="text">
+            This is some subtext under an illustration or image
+          </div>
+        </div>
+        <div class="info">
+          <img src="./img/watch_4.jpg" alt="" />
+          <div class="text">
+            This is some subtext under an illustration or image
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="quote-section">
+      <figure>
+        <blockquote>
+          <p>
+            Words can be like X-rays, if you use them properly—they’ll go
+            through anything. You read and you’re pierced.
+          </p>
+        </blockquote>
+        <figcaption><strong>-Aldous Huxley</strong></figcaption>
+      </figure>
+    </div>
+    <div class="signup-section">
+      <div class="background-box">
+        <div class="background-box-wrapper">
+          <div class="background-box-title">Call to action! It's time!</div>
+          <p>Signup for the Casio newsletter by clicking on the button.</p>
+        </div>
+        <button>Signup</button>
+      </div>
+    </div>
+    <div class="footer">Copyright &copy; The Odin Project</div>
+  </body>
 </html>
