Done with the CSS section of the header. Started the main section.

--- a/index.html
+++ b/index.html
@@ -9,45 +9,54 @@
   </head>
   <body>
     <div class="header">
-      <div class="logo">Header Logo</div>
+      <div class="logo">
+        Unauthorized <span class="logo-changer">Casio</span> Dealer
+      </div>
       <ul class="link">
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
+        <li>
+          <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"
+            >header link one</a
+          >
+        </li>
+        <li><a href="#">header link two</a></li>
+        <li><a href="#">header link three</a></li>
       </ul>
     </div>
     <div class="intro-section">
-      <div class="intro-section-title">This website is awesome</div>
-      <p>
-        This website has some subtext that goes here under the main title. It's
-        smaller font and the color is lower contrast.
-      </p>
-      <button>Sign Up</button>
+      <div class="left-content-wrapper">
+        <div class="intro-section-title">This website is awesome</div>
+        <p>
+          This website has some subtext that goes here under the main title.
+          It's smaller font and the color is lower contrast.
+        </p>
+        <button>Sign Up</button>
+      </div>
+
       <img src="./img/casio-gshock-logo.png" alt="" />
     </div>
     <div class="middle-section">
       <div class="middle-section-title">Some random information.</div>
       <div class="middle-section-image-container">
         <div class="info">
-          <img src="./img/watch_1.jpg" alt="" />
+          <img src="./img/casio_1.png" alt="" />
           <div class="text">
             This is some subtext under an illustration or image
           </div>
         </div>
         <div class="info">
-          <img src="./img/watch_2.png" alt="" />
+          <img src="./img/casio_2.webp" alt="" />
           <div class="text">
             This is some subtext under an illustration or image
           </div>
         </div>
         <div class="info">
-          <img src="./img/watch_3.png" alt="" />
+          <img src="./img/casio_3.webp" alt="" />
           <div class="text">
             This is some subtext under an illustration or image
           </div>
         </div>
         <div class="info">
-          <img src="./img/watch_4.jpg" alt="" />
+          <img src="./img/casio_4.png" alt="" />
           <div class="text">
             This is some subtext under an illustration or image
           </div>
@@ -69,7 +78,7 @@
       <div class="background-box">
         <div class="background-box-wrapper">
           <div class="background-box-title">Call to action! It's time!</div>
-          <p>Signup for the Casio newsletter by clicking on the button.</p>
+          <p>Signup for the fake Casio newsletter by clicking on the button.</p>
         </div>
         <button>Signup</button>
       </div>
