Finished with the main section

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
       <ul class="link">
         <li>
           <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"
-            >header link one</a
+            >About</a
           >
         </li>
-        <li><a href="#">header link two</a></li>
-        <li><a href="#">header link three</a></li>
+        <li><a href="#">Products</a></li>
+        <li><a href="#">Support</a></li>
       </ul>
     </div>
     <div class="intro-section">
