Middle section completed.

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
           This website has some subtext that goes here under the main title.
           It's smaller font and the color is lower contrast.
         </p>
-        <button>Sign Up</button>
+        <button>Buy Now</button>
       </div>
 
       <img src="./img/casio-gshock-logo.png" alt="" />
     </div>
     <div class="middle-section">
-      <div class="middle-section-title">Some random information.</div>
+      <div class="middle-section-title">Most popular models.</div>
       <div class="middle-section-image-container">
         <div class="info">
-          <img src="./img/casio_1.png" alt="" />
+          <img src="./img/casio_1.webp" alt="" />
           <div class="text">
             This is some subtext under an illustration or image
           </div>
