HTML and CSS finished.

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </div>
     <div class="intro-section">
       <div class="left-content-wrapper">
-        <div class="intro-section-title">This website is awesome</div>
+        <div class="intro-section-title">Quartz watches are awesome</div>
         <p>
-          This website has some subtext that goes here under the main title.
-          It's smaller font and the color is lower contrast.
+          They keep proper time unlike those expensive, mechanical Rovlekses.
+          Besides, they are fairly cheap and the battery lasts decades.
         </p>
         <button>Buy Now</button>
       </div>
@@ -66,12 +66,14 @@
     <div class="quote-section">
       <figure>
         <blockquote>
-          <p>
-            Words can be like X-rays, if you use them properly—they’ll go
-            through anything. You read and you’re pierced.
+          <it>
+            <cite>I love Casio watches, I really do. They properly chuff my bits, and
+            that's all that matters when it comes to timepieces.</cite>
           </p>
         </blockquote>
-        <figcaption><strong>-Aldous Huxley</strong></figcaption>
+        <figcaption>
+          <strong>-Nico Leopard, Hublot salesman.</strong>
+        </figcaption>
       </figure>
     </div>
     <div class="signup-section">
@@ -80,9 +82,11 @@
           <div class="background-box-title">Call to action! It's time!</div>
           <p>Signup for the fake Casio newsletter by clicking on the button.</p>
         </div>
-        <button>Signup</button>
+        <div class="signup-button">
+            <a href="#">Sign up</a>
+        </div>
       </div>
     </div>
-    <div class="footer">Copyright &copy; The Odin Project</div>
+    <div class="footer">Copyright &copy; Unauthorized Casio Dealer</div>
   </body>
 </html>
